--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,12 @@ body{
 /* action css */
 .action{
     background-color: #F5F8FF;
+    
 }
 
 .action-content{
     display: flex;
+    padding-left: 50px;
     flex-direction: column;
     align-items: start;
     justify-content: center;
@@ -66,6 +68,44 @@ body{
     color: royalblue;
 }
 
+/* review css */
+.review-content{
+    display: flex;
+    justify-content: space-around;
+}
+.review-item{
+    width: 300px;
+    background-color: rgb(246, 235, 235);
+    padding: 30px;
+    border-radius: 20px;
+}
+
+.star{
+    display: flex;
+    gap: 10px;
+}
+.review-end{
+    display: flex;
+}
+.review-end>img{
+    border-radius: 50% ;
+    width: 60px;
+    height: 60px;
+    margin-right: 20px;
+}
+.review-end>div{
+    line-height: 4px;
+}
+.star>i{
+    color: orange;
+}
+.card-heading{
+    font-size: 28px;
+}
+
+.card-text{
+    color: gray;
+}
 
 /* shared css */
 .container{
@@ -118,7 +158,7 @@ body{
 
 
 .section-margin{
-    margin: 50px 0px;
+    margin: 180px 0px;
 }
 
 
